[package]
name = "hwp"
version = "0.1.0"
authors = ["Chris Ohk <utilforever@gmail.com>"]
description = "A simple hwp parser for cross-platform written in Rust"
repository = "https://github.com/utilforever/hwp-rs"
readme = "README.md"
keywords = [ "hwp", "parser" ]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
